--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "fs": false
   },
   "dependencies": {
-    "superagent": "3.7.0",
-    "crypto-js": "^3.1.9-1"
+    "crypto-js": "^3.1.9-1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "superagent": "3.7.0"
   },
   "devDependencies": {
     "eslint": "^5.8.0",
