--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fs": false
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "crypto-js": "^3.1.9-1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
